修改类名